[package]
name = "cassandra_poc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.30", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
scylla = "0.7"
redis = { version = "0.23", features = ["tokio-comp"] }
regex = "1.7"




